<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity"
    android:id="@+id/rootLayout"
    android:background="@color/white">
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transport_survey"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"
        style="@style/widget_style"
        />

    <TextView
        android:id="@+id/tvClientNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/client_number"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="@dimen/_30dp"
        android:layout_marginTop="@dimen/_30dp"
        style="@style/widget_style"/>

    <EditText
        android:id="@+id/edClientNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@id/tvClientNumber"
        app:layout_constraintLeft_toRightOf="@id/tvClientNumber"
        android:layout_marginLeft="@dimen/_70dp"
        style="@style/widget_style"
/>

    <TextView
        android:id="@+id/tvTransport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_of_transport"
        app:layout_constraintStart_toStartOf="@id/tvClientNumber"
        app:layout_constraintTop_toBottomOf="@id/tvClientNumber"
        android:layout_marginTop="30dp"
        style="@style/widget_style"/>

    <RadioGroup
        android:id="@+id/rgTransport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edClientNumber"
        app:layout_constraintLeft_toRightOf="@id/tvTransport"
        android:layout_marginLeft="@dimen/_50dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbBus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/bus"
            style="@style/widget_style"/>

        <RadioButton
            android:id="@+id/rbMetro"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/metro"
            style="@style/widget_style"/>

        <RadioButton
            android:id="@+id/rbPrivateTransport"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/private_transport"
            style="@style/widget_style"/>

        <RadioButton
            android:id="@+id/rbTaxi"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/taxi"
            style="@style/widget_style"/>
    </RadioGroup>

    <TextView
        android:id="@+id/tvNumberOfKmPerDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_of_km_per_day"
        app:layout_constraintStart_toStartOf="@id/tvTransport"
        app:layout_constraintTop_toBottomOf="@id/tvTransport"
        android:layout_marginTop="@dimen/_30dp"
        style="@style/widget_style"
        />

    <EditText
        android:id="@+id/edNumberOfKmPerDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@id/edClientNumber"
        app:layout_constraintBaseline_toBaselineOf="@id/tvNumberOfKmPerDay"
        style="@style/widget_style"/>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintStart_toStartOf="@id/tvNumberOfKmPerDay"
        app:layout_constraintTop_toBottomOf="@id/tvNumberOfKmPerDay"
        android:layout_marginTop="@dimen/_40dp"
        android:textAllCaps="false"
        style="@style/widget_style"/>

    <Button
        android:id="@+id/btnClearAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_all"
        app:layout_constraintBaseline_toBaselineOf="@id/btnSave"
        app:layout_constraintLeft_toRightOf="@id/btnSave"
        android:layout_marginLeft="@dimen/_40dp"
        android:textAllCaps="false"
        style="@style/widget_style"
        />

    <Button
        android:id="@+id/btnQuit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quit"
        app:layout_constraintBaseline_toBaselineOf="@id/btnSave"
        app:layout_constraintLeft_toRightOf="@id/btnClearAll"
        android:layout_marginLeft="@dimen/_40dp"
        android:textAllCaps="false"
        style="@style/widget_style"/>

    <Button
        android:id="@+id/btnShowAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_all"
        app:layout_constraintBaseline_toBaselineOf="@id/btnSave"
        app:layout_constraintLeft_toRightOf="@id/btnQuit"
        android:layout_marginLeft="@dimen/_40dp"
        android:textAllCaps="false"
        style="@style/widget_style"/>
</androidx.constraintlayout.widget.ConstraintLayout>